<resources>
    <string name="messenger_send_button_text">Send</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_tooltip_default">New! You&apos;re in control - choose what info you want to share with apps.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt;&lt;br /&gt;on your smartphone or computer&lt;br /&gt;and enter this code</string>
    <string name="account_menu_add_account">Add an account</string>
    <string name="account_picker_list_body">Which account do you want to sign in to this app with?</string>
    <string name="account_picker_list_header">Choose one</string>
    <string name="account_picker_menu_dismiss">Close</string>
    <string name="account_setting_up">Please wait while we finish adding your account.</string>
    <string name="account_setting_up_header">You&apos;re almost done</string>
    <string name="app_market">en-US</string>
    <string name="authentication_button_finish">finish</string>
    <string name="authentication_button_next">next</string>
    <string name="authentication_button_previous">previous</string>
    <string name="error_body_generic_failure">Please try again.</string>
    <string name="error_header_generic_failure">Something went wrong</string>
    <string name="error_header_server_network_error">We are having problems connecting to the server</string>
    <string name="error_overlay_no_network">You have no internet connection</string>
    <string name="sign_out_dialog_button_cancel">Cancel</string>
    <string name="sign_out_dialog_button_sign_out">Sign out</string>
    <string name="sign_out_dialog_checkbox">Sign out of all Microsoft apps using %1$s</string>
    <string name="sign_out_dialog_title">Do you want to sign out of this app?</string>
    <string name="user_tile_image_content_description">The user&apos;s image.</string>
    <string name="webflow_header">Microsoft account</string>
    <string name="sdk_version_name">2.1.0504.0524</string>
    <string name="xbid_ban_error_header_android">Hi, %1$s.</string>
    <string name="xbid_ban_error_body_android">We can&apos;t sign you in because your account has been suspended from Xbox Live.</string>
    <string name="xbid_creation_error_android">Sorry, we couldn&apos;t complete your Xbox profile. If it happens again, try setting it up at &lt;u&gt;Xbox.com&lt;/u&gt;</string>
    <string name="xbid_catchall_error_android">Sorry, something went wrong. Give it another try, or try on &lt;u&gt;Xbox.com&lt;/u&gt;</string>
    <string name="xbid_error_offline_android">Make sure you&apos;re online, then try again. We can&apos;t connect right now.</string>
    <string name="xbid_close">Close</string>
    <string name="xbid_try_again">Try again</string>
    <string name="xbid_more_info">More info</string>
    <string name="xbid_sign_up_header">Welcome to Xbox</string>
    <string name="xbid_sign_up_subheader_android">Here&apos;s your name on Xbox (or &quot;gamertag&quot;). Change it if you want!</string>
    <string name="xbid_gamertag_placeholder">Gamertag</string>
    <string name="xbid_privacy_settings_header_android">Privacy settings: %1$s</string>
    <string name="xbid_age_group_adult">Adult default</string>
    <string name="xbid_age_group_teen">Teen default</string>
    <string name="xbid_age_group_child">Child default</string>
    <string name="xbid_age_group_adult_details_android">Your friends and their friends can see if you&apos;re online, your game clips, and your recent apps and games. You can change these on &lt;u&gt;Xbox.com&lt;/u&gt;</string>
    <string name="xbid_age_group_teen_details_android">Your Xbox friends and their friends can see your real name and your profile. Your Xbox friends can see if you&apos;re online, your game clips, and your recent apps and games</string>
    <string name="xbid_age_group_child_details_android">Your Xbox friends can see your profile, but not your real name. Friends and their friends can see if you&apos;re online and available to play, but you&apos;ll need a parent&apos;s permission to add friends</string>
    <string name="xbid_next">Next</string>
    <string name="xbid_claim_it">Claim it!</string>
    <string name="xbid_another_gamertag">Already have a gamertag?</string>
    <string name="xbid_another_sign_in">Sign in with a different Microsoft account</string>
    <string name="xbid_gamertag_check_availability">Check availability</string>
    <string name="xbid_gamertag_not_available_android">That&apos;s taken. How about:</string>
    <string name="xbid_gamertag_checking_android">Checking…</string>
    <string name="xbid_gamertag_available">Available!</string>
    <string name="xbid_gamertag_checking_error">An error occurred. Try again?</string>
    <string name="xbid_welcome_back">Welcome back!</string>
    <string name="xbid_customize_profile">You can customize your profile in the Xbox app</string>
    <string name="xbid_lets_play_android">Let&apos;s play</string>
    <string name="Profile_ChangeFriendship">Change friendship</string>
    <string name="Profile_Profile_AddFriend">Add friend</string>
    <string name="Narrator_Mute">Mute</string>
    <string name="Narrator_Unmute">Unmute</string>
    <string name="Profile_Profile_Block">Block</string>
    <string name="Profile_Profile_Unblock">Unblock</string>
    <string name="ProfileCard_Report">Report</string>
    <string name="Profile_ViewInXboxApp">View in the Xbox app</string>
    <string name="TextInput_Confirm">Done</string>
    <string name="FriendFinder_Link_Phone_Subtext">Link your account</string>
    <string name="FriendFinder_Link_Phone">Find phone contacts</string>
    <string name="FriendFinder_Phone_Next_ButtonText">Next</string>
    <string name="FriendFinder_PhoneNoContacts_GamingIsBetter_Dialog_Text">There are several ways to find people you know.</string>
    <string name="FriendFinder_PhoneContacts_GamingIsBetter_Dialog_Title">Gaming is more fun with friends</string>
    <string name="FriendFinder_InviteFriends">Invite friends</string>
    <string name="Suggestions_Invite_Phone_Contacts_Text">Invite your phone contacts</string>
    <string name="Suggestions_Invite_Phone_Contacts_Subtext">Send a message to your friends</string>
    <string name="FriendFinder_Link_Facebook">Link your Facebook account</string>
    <string name="FriendFinder_OptIn">Find friends</string>
    <string name="FriendFinder_LinkFacebook_Subtext">Find Facebook friends</string>
    <string name="FriendFinder_Facebook_ViewSuggestion_Buttontext">See suggestions</string>
    <string name="FriendFinder_Find_By_Gamertag">Find friends by gamertag</string>
    <string name="FriendFinder_Find_By_Gamertag_Subtext">Search for gamertags you already know</string>
    <string name="FriendFinder_Invite_Facebook_Title">Invite the rest of your Facebook friends to Xbox</string>
    <string name="FriendFinder_Facebook_Share_Subtitle">Share an invitation to join Xbox</string>
    <string name="ic_changeFriendShip"></string>
    <string name="ic_PlayerAdd"></string>
    <string name="ic_VolumeDisabled2"></string>
    <string name="ic_VolumeMute"></string>
    <string name="ic_BadRecommendation"></string>
    <string name="ic_Complaint"></string>
    <string name="ic_GamerScore"></string>
    <string name="ic_Search"></string>
    <string name="ic_PhoneCall"></string>
    <string name="ic_ApplicationLaunch"></string>
    <string name="pref_texture_pack">Texture Pack</string>
    <string name="pref_zz_longvibration">Extra-long vibration</string>
    <string name="pref_zz_longvibration_summary">Increase the vibration length by 5x</string>
    <string name="pref_zz_safe_mode">Safe mode</string>
    <string name="pref_zz_safe_mode_summary">Disables all modifications</string>
    <string name="pref_zz_custom_dpi">Custom DPI</string>
    <string name="pref_zz_custom_dpi_summary">Change the reported screen density to change size of controls - leave blank to disable</string>
    <string name="pref_ctrl_title">Controls</string>
    <string name="pref_gfx_title">Graphics</string>
    <string name="pref_addons_title">Addons and patches</string>
    <string name="pref_textures_title">Textures</string>
    <string name="pref_support_title">Support</string>
    <string name="pref_zz_hovercar_hide">Hide patch manager button</string>
    <string name="pref_zz_script_enable">Enable ModPE Scripts support</string>
    <string name="pref_zz_show_insert_text">Show &quot;Insert text&quot; option in in-game patch manager</string>
    <string name="pref_zz_language_override">Language</string>
    <string name="pref_zz_legacy_keyboard_input">Use old keyboard input code</string>
    <string name="pref_zz_legacy_keyboard_input_summary">A fix to keyboard bugs in the new 0.8.x update</string>
    <string name="nerdy_stuff_page">Nerdy stuff</string>
    <string name="dump_libminecraftpe">Dump libminecraftpe.so from memory</string>
    <string name="nerdy_stuff_are_useless">Pretty much everything on this page is useless. They are here for troubleshooting bugs.</string>
    <string name="restart_app">Restart app</string>
    <string name="manage_patches">Manage patches</string>
    <string name="manage_patches_import">Import</string>
    <string name="manage_patches_import_confirm">Do you want to import this patch?</string>
    <string name="manage_patches_info">Information</string>
    <string name="manage_addons">Manage addons</string>
    <string name="about_about">About BlockLauncher</string>
    <string name="about_go_to_forums">Open Minecraft Forums thread for BlockLauncher</string>
    <string name="nerdy_stuff_dump_modpe">Dump ModPE Script methods</string>
    <string name="nerdy_stuff_set_skin">Set skin to /sdcard/skin.png</string>
    <string name="nerdy_stuff_secret">Authorized personnel only</string>
    <string name="pref_other_title">Other</string>
    <string name="pref_zz_legacy_live_patch">Use old live patching code from BlockLauncher 1.6.8</string>
    <string name="pref_zz_legacy_live_patch_summary">Turn this on if BlockLauncher stopped working after the 1.6.9 update.</string>
    <string name="pref_zz_command_history">Enable command history on chat screen</string>
    <string name="pref_zz_immersive_mode">Fullscreen mode</string>
    <string name="pref_zz_immersive_mode_summary">Hide the navigation buttons during gameplay</string>
    <string name="advertising_privacy_policy">Advertising privacy policy</string>
    <string name="pref_zz_signal_handler">Write crash logs to shared storage</string>
    <string name="pref_zz_theme_dark">Use dark theme</string>
    <string name="pref_zz_desktop_gui">Use Desktop GUI</string>
    <string name="pref_zz_desktop_gui_summary">Change inventory and crafting windows to Desktop mode</string>
</resources>