<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16pt" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/nerdy_stuff_are_useless" />
        <Button android:id="@+id/dump_libminecraftpe_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/dump_libminecraftpe" />
        <Button android:id="@+id/restart_app_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/restart_app" />
        <Button android:id="@+id/dump_modpe_methods" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/nerdy_stuff_dump_modpe" />
        <Button android:id="@+id/set_skin_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/nerdy_stuff_set_skin" />
        <Button android:id="@+id/chef_special" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/nerdy_stuff_secret" />
    </LinearLayout>
</ScrollView>
