<?xml version="1.0" encoding="utf-8"?>
<com.microsoft.xbox.xle.ui.XLERootView xmlns:android="http://schemas.android.com/apk/res-auto" xle:id="@+id/profile_root" xle:background="@drawable/background_default" xle:layout_width="match_parent" xle:layout_height="match_parent">
    <LinearLayout xle:orientation="horizontal" xle:layout_width="match_parent" xle:layout_height="match_parent">
        <FrameLayout xle:layout_width="UNKNOWN_DATA_0x1" xle:layout_height="match_parent" xle:layout_weight="2.0">
            <com.microsoft.xbox.toolkit.ui.XLERoundedUniversalImageView xle:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" xle:id="@+id/profile_gamerpic" xle:layout_width="UNKNOWN_DATA_0x7f06003d" xle:layout_height="UNKNOWN_DATA_0x7f06003d" xle:src="@drawable/placeholder_x" xle:maxWidth="@dimen/profileMsaPicSize" xle:maxHeight="@dimen/profileMsaPicSize" xle:cropToPadding="false" />
        </FrameLayout>
        <FrameLayout xle:layout_width="UNKNOWN_DATA_0x1" xle:layout_height="match_parent" xle:layout_weight="3.0">
            <com.microsoft.xbox.toolkit.ui.FastProgressBar xle:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" xle:id="@+id/profile_screen_loading" xle:visibility="visible" xle:layout_width="UNKNOWN_DATA_0x4001" xle:layout_height="UNKNOWN_DATA_0x4001" xle:indeterminateOnly="true" xle:indeterminateDrawable="@drawable/rotate_loading_rings_small" />
            <ScrollView xle:id="@+id/profile_screen_content_list" xle:visibility="gone" xle:layout_width="match_parent" xle:layout_height="match_parent">
                <LinearLayout xle:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" xle:orientation="vertical" xle:paddingTop="15dp" xle:paddingBottom="15dp" xle:layout_width="match_parent" xle:layout_height="wrap_content"
                    <LinearLayout xle:orientation="horizontal" xle:layout_width="match_parent" xle:layout_height="wrap_content">
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:textSize="17sp" xle:id="@+id/profile_realname" xle:layout_width="wrap_content" xle:layout_height="wrap_content" xle:layout_marginRight="30dp" xle:layout_marginBottom="4dp" xle:singleLine="true" xle:maxLength="30" style="@style/SUI_white" />
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:textSize="17sp" xle:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" xle:id="@+id/profile_gamerscore_icon" xle:visibility="gone" xle:layout_marginTop="1dp" xle:layout_marginRight="1dp" xle:text="@string/ic_GamerScore" style="@style/xbox_symbol" />
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:textSize="17sp" xle:id="@+id/profile_gamerscore" xle:padding="2dp" xle:layout_width="wrap_content" xle:layout_height="wrap_content" xle:singleLine="true" xle:includeFontPadding="false" style="@style/SUI_white" />
                    </LinearLayout>
                    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:textSize="40sp" xle:textStyle="bold" xle:ellipsize="end" xle:id="@+id/profile_gamertag" xle:visibility="gone" xle:layout_width="wrap_content" xle:layout_height="wrap_content" xle:layout_marginRight="5dp" xle:layout_marginBottom="5dp" xle:singleLine="true" xle:includeFontPadding="false" style="@style/SUI_white" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton xle:id="@+id/profile_follow" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="UNKNOWN_DATA_0x7f06003d" xle:layout_height="UNKNOWN_DATA_0x7f06003e" xle:layout_marginLeft="-5dp" xle:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/Profile_ChangeFriendship" xle:text_unchecked="@string/Profile_Profile_AddFriend" xle:icon_checked="@string/ic_changeFriendShip" xle:icon_unchecked="@string/ic_PlayerAdd" xle:icon_size="16sp" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton xle:id="@+id/profile_mute" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="UNKNOWN_DATA_0x7f06003d" xle:layout_height="UNKNOWN_DATA_0x7f06003e" xle:layout_marginLeft="-5dp" xle:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/Narrator_Unmute" xle:text_unchecked="@string/Narrator_Mute" xle:icon_checked="@string/ic_VolumeDisabled2" xle:icon_unchecked="@string/ic_VolumeMute" xle:icon_size="18sp" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton xle:id="@+id/profile_report" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="UNKNOWN_DATA_0x7f06003d" xle:layout_height="UNKNOWN_DATA_0x7f06003e" xle:layout_marginLeft="-5dp" xle:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/ProfileCard_Report" xle:text_unchecked="@string/ProfileCard_Report" xle:icon_checked="@string/ic_Complaint" xle:icon_unchecked="@string/ic_Complaint" xle:icon_size="16sp" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton xle:id="@+id/profile_block" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="UNKNOWN_DATA_0x7f06003d" xle:layout_height="UNKNOWN_DATA_0x7f06003e" xle:layout_marginLeft="-5dp" xle:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/Profile_Profile_Unblock" xle:text_unchecked="@string/Profile_Profile_Block" xle:icon_checked="@string/ic_BadRecommendation" xle:icon_unchecked="@string/ic_BadRecommendation" xle:icon_size="14sp" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton xle:id="@+id/profile_view_in_xbox_app" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="UNKNOWN_DATA_0x7f06003d" xle:layout_height="UNKNOWN_DATA_0x7f06003e" xle:layout_marginLeft="-5dp" xle:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/Profile_ViewInXboxApp" xle:text_unchecked="@string/Profile_ViewInXboxApp" xle:icon_checked="@string/ic_ApplicationLaunch" xle:icon_unchecked="@string/ic_ApplicationLaunch" xle:icon_size="14sp" />
                    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:textSize="13sp" xle:textStyle="italic" xle:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" xle:id="@+id/profile_view_in_xbox_app_subtext" xle:layout_width="wrap_content" xle:layout_height="wrap_content" xle:layout_marginLeft="35dp" xle:layout_marginTop="-10dp" xle:includeFontPadding="false" xle:typefaceSource="fonts/SegoeWP.ttf" style="@style/standard_subText" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</com.microsoft.xbox.xle.ui.XLERootView>
