<?xml version="1.0" encoding="utf-8"?>
<com.microsoft.xbox.xle.ui.XLERootView xmlns:android="http://schemas.android.com/apk/res-auto" xle:padding="@dimen/friendFinderPageMargin" xle:layout_width="match_parent" xle:layout_height="match_parent">
    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:id="@+id/friendfinder_invite_title" xle:layout_width="match_parent" xle:layout_height="wrap_content" style="@style/FriendFinder_Title" />
    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:id="@+id/friendfinder_invite_subtitle" xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="@dimen/friendFinderVerticalMargin" xle:layout_marginBottom="@dimen/friendFinderVerticalMargin" xle:layout_below="@+id/friendfinder_invite_title" style="@style/standard_text" />
    <com.microsoft.xbox.xle.ui.ImageTitleSubtitleButton xle:id="@+id/friendfinder_invite_facebook" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="5dp" xle:layout_below="@+id/friendfinder_invite_subtitle" xle:text_title="@string/FriendFinder_Invite_Facebook_Title" xle:text_subtitle="@string/FriendFinder_Facebook_Share_Subtitle" />
    <com.microsoft.xbox.xle.ui.IconFontSubTextButton xle:id="@+id/friendfinder_invite_phone" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="5dp" xle:layout_below="@+id/friendfinder_invite_subtitle" xle:text_title="@string/Suggestions_Invite_Phone_Contacts_Text" xle:text_subtitle="@string/Suggestions_Invite_Phone_Contacts_Subtext" xle:icon_uri="@string/ic_PhoneCall" xle:icon_bg="@color/XboxOneGreen" />
    <com.microsoft.xbox.toolkit.ui.XLEButton xle:id="@+id/friendfinder_invite_next" xle:layout_width="UNKNOWN_DATA_0xfa01" xle:layout_height="wrap_content" xle:text="@string/FriendFinder_Phone_Next_ButtonText" xle:layout_alignParentBottom="true" xle:layout_centerHorizontal="true" style="@style/friendfinder_button" />
</com.microsoft.xbox.xle.ui.XLERootView>
