<?xml version="1.0" encoding="utf-8"?>
<com.microsoft.xbox.xle.ui.XLERootView xmlns:android="http://schemas.android.com/apk/res-auto" xle:layout_width="match_parent" xle:layout_height="match_parent">
    <ScrollView xle:layout_width="match_parent" xle:layout_height="match_parent">
        <LinearLayout xle:orientation="vertical" xle:padding="@dimen/friendFinderPageMargin" xle:layout_width="match_parent" xle:layout_height="wrap_content">
            <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:text="@string/FriendFinder_PhoneContacts_GamingIsBetter_Dialog_Title" style="@style/FriendFinder_Title" />
            <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="10dp" xle:text="@string/FriendFinder_PhoneNoContacts_GamingIsBetter_Dialog_Text" style="@style/standard_text" />
            <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="@dimen/friendFinderVerticalMargin" xle:layout_marginBottom="@dimen/friendFinderVerticalMargin" xle:text="@string/FriendFinder_OptIn" style="@style/FriendFinder_Title" />
            <com.microsoft.xbox.xle.ui.ImageTitleSubtitleButton xle:id="@+id/friendfinder_link_facebook" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="5dp" xle:text_title="@string/FriendFinder_LinkFacebook_Subtext" xle:text_subtitle="@string/FriendFinder_Link_Facebook" />
            <com.microsoft.xbox.xle.ui.IconFontSubTextButton xle:id="@+id/friendfinder_link_phone" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="5dp" xle:text_title="@string/FriendFinder_Link_Phone" xle:text_subtitle="@string/FriendFinder_Link_Phone_Subtext" xle:icon_uri="@string/ic_PhoneCall" xle:icon_bg="@color/white_15_percent" />
            <FrameLayout xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="5dp">
                <com.microsoft.xbox.xle.ui.IconFontSubTextButton xle:id="@+id/friendfinder_link_search" xle:background="@drawable/common_button_background" xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:text_title="@string/FriendFinder_Find_By_Gamertag" xle:text_subtitle="@string/FriendFinder_Find_By_Gamertag_Subtext" xle:icon_uri="@string/ic_Search" xle:icon_bg="@color/white_15_percent" />
                <RelativeLayout xle:id="@+id/friendfinder_search_layout" xle:background="@color/backgroundColor" xle:visibility="gone" xle:layout_width="match_parent" xle:layout_height="wrap_content">
                    <FrameLayout xle:id="@+id/friendfinder_search_icon" xle:background="@drawable/friendfinder_home_search_background" xle:focusable="true" xle:clickable="true" xle:layout_width="UNKNOWN_DATA_0x7f060046" xle:layout_height="UNKNOWN_DATA_0x7f060046" xle:layout_marginRight="@dimen/friendFinderPageMargin" xle:layout_alignParentLeft="true" xle:layout_centerVertical="true" xle:contentDescription="@string/FriendFinder_Find_By_Gamertag_Subtext">
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" xle:layout_width="UNKNOWN_DATA_0x7f060047" xle:layout_height="UNKNOWN_DATA_0x7f060046" xle:text="@string/ic_Search" style="@style/xbox_symbol" />
                    </FrameLayout>
                    <View xle:background="@color/white_10_percent" xle:layout_width="match_parent" xle:layout_height="UNKNOWN_DATA_0x101" xle:layout_toRightOf="@+id/friendfinder_search_icon" xle:layout_alignParentTop="true" />
                    <View xle:background="@color/white_10_percent" xle:layout_width="match_parent" xle:layout_height="UNKNOWN_DATA_0x101" xle:layout_toRightOf="@+id/friendfinder_search_icon" xle:layout_alignParentBottom="true" />
                    <EditText xle:id="@+id/friendfinder_search_edittext" xle:background="0x106000d" xle:layout_width="match_parent" xle:layout_height="match_parent" xle:hint="@string/FriendFinder_Find_By_Gamertag" xle:layout_toRightOf="@+id/friendfinder_search_icon" xle:layout_centerVertical="true" xle:imeOptions="actionNone|actionGo|actionSearch|actionNext|actionDone|actionPrevious" />
                </RelativeLayout>
            </FrameLayout>
            <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView xle:id="@+id/friendfinder_home_invite_friends_text" xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="@dimen/friendFinderVerticalMargin" xle:layout_marginBottom="@dimen/friendFinderVerticalMargin" xle:text="@string/FriendFinder_InviteFriends" style="@style/FriendFinder_Title" />
            <com.microsoft.xbox.xle.ui.ImageTitleSubtitleButton xle:id="@+id/friendfinder_home_invite_facebook" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="5dp" xle:text_title="@string/FriendFinder_LinkFacebook_Subtext" xle:text_subtitle="@string/FriendFinder_Facebook_ViewSuggestion_Buttontext" />
            <com.microsoft.xbox.xle.ui.IconFontSubTextButton xle:id="@+id/friendfinder_home_invite_phone" xle:background="@drawable/common_button_background" xle:visibility="gone" xle:layout_width="match_parent" xle:layout_height="wrap_content" xle:layout_marginTop="5dp" xle:text_title="@string/FriendFinder_Link_Phone" xle:text_subtitle="@string/FriendFinder_Facebook_ViewSuggestion_Buttontext" xle:icon_uri="@string/ic_PhoneCall" xle:icon_bg="@color/white_15_percent" />
            <com.microsoft.xbox.toolkit.ui.XLEButton xle:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" xle:id="@+id/friendfinder_home_done" xle:visibility="visible" xle:layout_width="UNKNOWN_DATA_0xfa01" xle:layout_height="wrap_content" xle:layout_marginTop="@dimen/friendFinderVerticalMargin" xle:text="@string/TextInput_Confirm" style="@style/friendfinder_button" />
        </LinearLayout>
    </ScrollView>
    <FrameLayout xle:id="@+id/friendfinder_home_loading" xle:background="@color/backgroundColor" xle:layout_width="match_parent" xle:layout_height="match_parent">
        <com.microsoft.xbox.toolkit.ui.FastProgressBar xle:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" xle:visibility="visible" xle:layout_width="UNKNOWN_DATA_0x4001" xle:layout_height="UNKNOWN_DATA_0x4001" xle:indeterminateOnly="true" xle:indeterminateDrawable="@drawable/rotate_loading_rings_small" />
    </FrameLayout>
</com.microsoft.xbox.xle.ui.XLERootView>
