<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
    <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:textColor="?unknown_attr_ref: 1010036" android:ellipsize="end" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/app_name" android:paddingLeft="6dp" android:paddingRight="6dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/manage_patches_info" android:singleLine="true" android:shadowRadius="2.0" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/install_confirm_question" android:paddingLeft="20dp" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manage_patches_import_confirm" />
    <View android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.0" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" style="@*style/ButtonBar">
        <Button android:id="@+id/ok_button" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:text="@string/manage_patches_import" android:layout_weight="1.0" android:filterTouchesWhenObscured="true" />
        <Button android:id="@+id/cancel_button" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:text="0x1040000" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
